--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,11 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@import url("https://fonts.googleapis.com/css?family=Slabo+27px|Roboto|Source+Sans+Pro");
+html {
+  scroll-behavior: smooth;
 }
+  
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
