--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,7 +1,7 @@
 .contact {
     background: linear-gradient(rgba(10, 10, 10, 0.6), rgba(10, 10, 10, 0.6)), url("../images/project.jpg");
     color: white;
-    padding: 100px;
+    padding: 5%;
     background-size: cover;
   }
   
