--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -38,7 +38,9 @@
   
   .about-general-description,.about-statistic-description {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
+    max-width: 100%;
+    margin-left: 15%;
   }
   
   .about-general-description h2,
